@@ -1,23 +1,18 @@
 package com.example.SpringBlogAdmin.config;
 
 
-import jakarta.servlet.Filter;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.provisioning.InMemoryUserDetailsManager;
-import org.springframework.security.web.AuthenticationEntryPoint;
-import com.example.SpringBlogAdmin.config.JWTAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -25,8 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.LinkedHashMap;
-import java.util.Map;
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.Supplier;
 //import org.springframework.web.servlet.config.annotation.EnableWebMvc;
@@ -35,53 +29,29 @@ import java.util.function.Supplier;
 @EnableWebSecurity
 public class SpringConfig {
 
+    public static final String[] PUBLIC_ENDPOINTS = {"/api/login", "/api/register", "/uploads/**",};
     private final UserDetailsService userDetailsService;
-    private JWTAuthenticationFilter jwtAuthenticationFilter;
+    private final HttpServletRequest request;
+    private final JWTAuthenticationFilter jwtAuthenticationFilter;
 
-    public SpringConfig(UserDetailsService userDetailsService,JWTAuthenticationFilter jwtAuthenticationFilter){
-        this.userDetailsService=userDetailsService;
-        this.jwtAuthenticationFilter=jwtAuthenticationFilter;
+    public SpringConfig(HttpServletRequest request, UserDetailsService userDetailsService, JWTAuthenticationFilter jwtAuthenticationFilter) {
+        this.userDetailsService = userDetailsService;
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.request = request;
     }
 
-    public static final String[] PUBLIC_ENDPOINTS={
-            "/api/login",
-            "/api/register",
-            "/uploads/**",
-    };
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity,CustomAuthenticationEntryPoint entryPoint) throws Exception{
-
-
-        httpSecurity.cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .exceptionHandling(exceptions -> exceptions
-                        .authenticationEntryPoint(entryPoint)
-                )
-                .csrf(csrf->csrf.disable())
-                .authorizeHttpRequests(request->request
-                        .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
-                        .anyRequest().authenticated()
-                )
-                .httpBasic(Customizer.withDefaults())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(jwtAuthenticationFilter,
-                UsernamePasswordAuthenticationFilter.class);
-       return httpSecurity.build();
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity, CustomAuthenticationEntryPoint entryPoint) throws Exception {
+        httpSecurity.cors(cors -> cors.configurationSource(corsConfigurationSource())).exceptionHandling(exceptions -> exceptions.authenticationEntryPoint(entryPoint)).csrf(csrf -> csrf.disable()).authorizeHttpRequests(request -> request.requestMatchers(PUBLIC_ENDPOINTS).permitAll().anyRequest().authenticated()).httpBasic(Customizer.withDefaults()).sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)).addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        return httpSecurity.build();
     }
 
-
-//    @Bean
-//    public DaoAuthenticationProvider daoAuthenticationProvider()
-//    {
-//        DaoAuthenticationProvider authProvider=new DaoAuthenticationProvider();
-//        authProvider.setUserDetailsService(userDetailsService);
-//        authProvider.setPasswordEncoder(passwordEncoder());
-//        return authProvider;
-//    }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
+
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -101,9 +71,9 @@ public class SpringConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173/","http://10.44.208.115:5173/"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173/", "http://10.44.208.115:5173/"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // Add this
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
